# mhrise_calculator

./: .gitignore  mhr-sim.code-workspace
crawler/: inven.ts  kiranico.ts  kiranico_armor.ts  kiranico_deco.ts  kiranico_skill.ts  main.ts  package-lock.json  package.json  util.ts
crawler/data/: armor.json  armor_override.json  data.ar.json  data.de.json  data.en.json  data.es.json  data.fr.json  data.it.json  data.ja.json  data.ko.json  data.pl.json  data.ru.json  data.zh-Hant.json  data.zh.json  deco.json  skill.json  skill_override.json
crawler/definition/: armor_define.ts
simulator/: anomaly_list.html  package-lock.json  package.json  vite.config.ts
simulator/calculator/: Cargo.toml
simulator/calculator/src/: lib.rs
simulator/calculator/src/calc/: armor.rs  calc_equipment.rs  talisman.rs
simulator/calculator/src/data/: armor.rs  data_manager.rs  deco.rs  deco_combination.rs  skill.rs
simulator/calculator/src/test/: mod.rs
simulator/public/data/: armor.json
simulator/src/: AnomalyApp.vue  App.vue  anomaly_list.ts
simulator/src-tauri/: Cargo.toml  tauri.conf.json
simulator/src-tauri/data/: armor.json  skill.json
simulator/src-tauri/src/: armor.rs  deco_combination.rs  full_equipments.rs  main.rs  skill.rs
simulator/src-tauri/src/calc/: armor.rs  calc_equipment.rs  deco.rs  skill.rs  talisman.rs
simulator/src-tauri/src/data/: armor.rs  deco.rs  (+3 more)
simulator/src/components/: Greet.vue  NewAnomalyArmor.vue
simulator/src/data/: armor.json  deco.json  skill.json  skill_category.json
simulator/src/definition/: armor_define.ts  skill_define.ts
(+1 files in other folders)
