[package]
name = "mhr-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "derive"] }
csv = "1.1.6"
itertools = "0.10.4"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1"